--- a/src/app/folder/folderlist.component.scss
+++ b/src/app/folder/folderlist.component.scss
@@ -1,5 +1,7 @@
 .mailFolder {
     position: relative;
+    min-height: 24px;
+    line-height: 22px;
 }
 
 .mailFolder .expand-button {
